app/styles/category.scss
$highlightColor: #12b1c9;
$contentTypeTitleTextColor:#FFF;
$contentContentText:#053043;

@import 'partials/category/_category-modules.scss';
@import 'partials/utils/_hero.scss';

header{
  background: rgba(43,75,84,.9);
  .cat-title{
    color: #FFF;
    font-size: 1.5em;
    margin-left: 20px;
  }
}
.main-content{
  .page-container{
    position:relative;
  }
  .page-content{
    width: 100%;
  }
  .category-content{
    background: #f1f1f1;
    padding-bottom: 20px;
    .tabs{
      background: #FFF;
      &.fixed {
        position: fixed;
        top: 0;
        z-index: 10;
        width: 100%;
        -webkit-transition-property: top;
        -webkit-transition-duration: 0.5s;
      }
      &.pinned{
        top: 60px;
      }
    }
    .tabs-placehold{
      display:none;
      &.fixed{
        display:block;
        position:relative;
      }
    }
    .tab{
      text-align:center;
      a{
        display:block;
        padding:15px;
        text-transform:uppercase;
      }
      &.active{
        border-bottom:10px solid $highlightColor;
      }
    }
    .tab-pane-content{
      width: 96.875%;
      margin: 0 auto;
      padding-top:20px;
      .content-type-title{
        display:inline-block;
        margin:0;
        padding:10px;
        color:$contentTypeTitleTextColor;
        font-size:1em; /* mobile size - desktop not available */
        background:$highlightColor;
        position:absolute;
      }
      .content-bucket{
        background-color:#FFF;
        padding:0 10px 10px 10px;
      }
      .content-bucket-type-1{
          .content-type-title{
            left:30px;
          }
      }
    }
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px){
  body{
    font-size: 10px;

  }
  .container-fluid{
    max-width: 100%;
  }
}

@media (max-width: 767px){
  body{
    font-size: 8px;
  }
  .main-content{

    .category-content{

        .results{
          margin:20px 0;
        }

    }
  }
}

